Added the Skipframe and GrayScaleObservation classes

--- a/mario_trainer.ipynb
+++ b/mario_trainer.ipynb
@@ -186,6 +186,70 @@
     "next_state, reward, done, trunc, info = env.step(action=0)\n",
     "print(f\"{next_state.shape}, {reward}, {done}, {trunc}, {info}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing of the environment\n",
+    "\n",
+    "Environment data is returned to the agent in `next_state`. As above, each state is represented by a `[3, 240, 256]` size array. Often that is more information than our agent needs, for instance Mario doesn't response on the color of the pipes or the sky!\n",
+    "\n",
+    "We use **Wrappers** to preprocess environment data before sending to an another agent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`SkipFrame` is used to modify the behavior of an OpenAI Gym environment. The `gym.Wrapper` class is a base class provided by the OpenAI Gym library that allows me to add functionality to an environment by wrapping it with additional behavior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SkipFrame(gym.Wrapper):\n",
+    "    def __init__(self, env, skip):\n",
+    "        super().__init__(env)\n",
+    "        self._skip = skip\n",
+    "    \n",
+    "    def step(self, action):\n",
+    "        total_reward = 0.0\n",
+    "        for i in range(self._skip):\n",
+    "            obs, reward, done, info = self.env.step(action)\n",
+    "            total_reward += reward\n",
+    "            if done:\n",
+    "                break\n",
+    "            return obs, total_reward, done, info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`GrayScaleObservation` is a common wrapper to transform an RGB image to grayscale; doing so reduces the size of the state representation without losing useful information. Now the size of each state: `[1, 240, 256]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GrayScaleObservation(gym.ObservationWrapper):\n",
+    "    def __init__(self, env):\n",
+    "        super().__init__(env)\n",
+    "        obs_shape = self.observation_space.shape[:2]\n",
+    "        self.observation_space = Box(low=0, high=255, shape=obs_shape, dtype=np.uint8)\n",
+    "    \n",
+    "    def permute_orientation(self, observation):\n",
+    "        observation = np.transpose(observation, (2, 0, 1))\n",
+    "        observation = torch.tensor(observation.copy(), dtype=torch.float)\n",
+    "        return observation"
+   ]
   }
  ],
  "metadata": {
