Added the agent

--- a/mario_trainer.ipynb
+++ b/mario_trainer.ipynb
@@ -312,6 +312,50 @@
    "source": [
     "After applying the above wrappers to the environment, the final wrapped state consists of 4 grey-scaled consecutive frames. Each time Mario makes an action, the environment responds with a state of this structure. The structure is represented by a 3D array of the size `[4, 84, 84]`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agent\n",
+    "\n",
+    "We create a class `Mario` to represent our agent in the game. Mario should be able to:\n",
+    "\n",
+    "- **Act** according to the optimal action policy based on the current environment state\n",
+    "- **Remember** experiences\n",
+    "- **Learn** a better action policy over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mario:\n",
+    "    def __init__():\n",
+    "        pass\n",
+    "    def act(self, state):\n",
+    "        pass\n",
+    "    def cache(self, experience):\n",
+    "        pass\n",
+    "    def recall(self):\n",
+    "        pass\n",
+    "    def learn(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is what the methods are doing to control our agent (Mario):\n",
+    "\n",
+    "- `act(self, state)` - Given a state, it chooses an epsilon-greedy action\n",
+    "- `cache(self, experience)` - Adds experience to memory\n",
+    "- `recall(self)` - Samples experiences from memory\n",
+    "- `learn(self)` - Updates the online action value (Q) function with a batch of experiences"
+   ]
   }
  ],
  "metadata": {
