Already made the agent to choose to do the most optimal function or a random one

--- a/mario_trainer.ipynb
+++ b/mario_trainer.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,7 @@
     "from torchvision import transforms as T\n",
     "from PIL import Image\n",
     "import numpy as np\n",
+    "# import mario_net_module\n",
     "from pathlib import Path\n",
     "from collections import deque\n",
     "import random, datetime, os\n",
@@ -85,7 +86,10 @@
     "from nes_py.wrappers import JoypadSpace\n",
     "\n",
     "# Super Mario environment for OpenAI Gym\n",
-    "import gym_super_mario_bros\n"
+    "import gym_super_mario_bros\n",
+    "\n",
+    "# Custom environment wrapper\n",
+    "import sys\n"
    ]
   },
   {
@@ -122,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,15 +332,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Mario:\n",
-    "    def __init__():\n",
-    "        pass\n",
+    "    def __init__(self, state_dim, action_dim, save_dir):\n",
+    "        self.state_dim = state_dim\n",
+    "        self.action_dim = action_dim\n",
+    "        self.save_dir = save_dir\n",
+    "\n",
+    "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "        # Mario's Deep Neural Network predicts the optimal action from the current state (implementing in the learn() method))\n",
+    "        self.net = MarioNet(self.state_dim, self.action_dim).float()\n",
+    "        self.net = self.net.to(self.device)\n",
+    "\n",
+    "        self.exploration_rate = 1\n",
+    "        self.exploration_rate_decay = 0.99999975\n",
+    "        self.exploration_rate_min = 0.1\n",
+    "        self.curl_step = 0\n",
+    "\n",
+    "        self.save_every = 5e5\n",
     "    def act(self, state):\n",
-    "        pass\n",
+    "        # Explore or Exploit\n",
+    "        if np.random.rand() < self.exploration_rate:\n",
+    "            action_idx = np.random.randint(self.action_dim)\n",
+    "\n",
+    "        else:\n",
+    "            state = state[0].__array__() if isinstance(state, tuple) else state.__array__()\n",
+    "            state = torch.tensor(state, device=self.device).unsqueeze(0)\n",
+    "            action_values = self.net(state, model=\"online\")\n",
+    "            action_idx = torch.argmax(action_values, axis=1).item()\n",
+    "\n",
+    "        # Decrease the exploration rate\n",
+    "        self.exploration_rate *= self.exploration_rate_decay\n",
+    "        self.exploration_rate = max(self.exploration_rate_min, self.exploration_rate)\n",
+    "\n",
+    "        # Increase the curl step\n",
+    "        self.curl_step += 1\n",
+    "        return action_idx\n",
     "    def cache(self, experience):\n",
     "        pass\n",
     "    def recall(self):\n",
